# osmo-sip-connector

./: .gitignore  .gitreview  Makefile.am  README.asciidoc  README.md  configure.ac  osmoappdesc.py
contrib/: jenkins.sh  osmo-sip-connector.spec  osmo-sip-connector.spec.in
contrib/systemd/: Makefile.am  osmo-sip-connector.service
contrib/testpbx/: Dockerfile  Makefile  README
contrib/testpbx/configs/: acl.conf.xml  default.xml  internal.xml  public.xml  switch.conf.xml  vars.xml
debian/: changelog  control  osmo-sip-connector-doc.install  osmo-sip-connector.install  osmo-sip-connector.service  postinst  rules
doc/examples/: Makefile.am  osmo-sip-connector.cfg
doc/manuals/: Makefile.am
doc/manuals/chapters/: overview.adoc
src/: Makefile.am  app.c  app.h  call.c  call.h  ctr.h  evpoll.c  evpoll.h  logging.h  main.c  mncc.c  mncc.h  mncc_protocol.h  sdp.c  sdp.h  sip.c  sip.h  vty.c  vty.h
tests/: Makefile.am
